--- a/css/utilities.css
+++ b/css/utilities.css
@@ -103,6 +103,23 @@ h2::selection {
   max-width: 700px;
 }
 
+/* About Me Container */
+.aboutMe-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 8rem;
+  padding: 1rem;
+}
+
+.content-text h4 {
+  padding: 0.5rem;
+  margin: 0 auto;
+  max-width: 700px;
+}
+
+
 /* Project cards */
 .card {
   padding: 1rem;
