--- a/css/utilities.css
+++ b/css/utilities.css
@@ -109,8 +109,9 @@ h2::selection {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 10rem;
-  padding: 1rem;
+  margin-top: 3rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 /* Project cards */
