--- a/css/utilities.css
+++ b/css/utilities.css
@@ -109,9 +109,10 @@ h2::selection {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 3rem;
-  padding-left: 5rem;
-  padding-right: 5rem;
+  margin-top: 1.5rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
+  padding-bottom: .1rem;
 }
 
 /* Project cards */
