--- a/css/utilities.css
+++ b/css/utilities.css
@@ -109,10 +109,10 @@ h2::selection {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 1.5rem;
-  padding-left: 4rem;
-  padding-right: 4rem;
-  padding-bottom: .1rem;
+  margin-top: 1rem;
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
+  margin-bottom: .1rem;
 }
 
 /* Project cards */
