--- a/css/utilities.css
+++ b/css/utilities.css
@@ -78,7 +78,7 @@ h2::selection {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 8rem;
+  margin-top: 10rem;
   padding: 1rem;
 }
 
@@ -113,6 +113,12 @@ h2::selection {
   padding-left: 3.5rem;
   padding-right: 3.5rem;
   margin-bottom: .1rem;
+}
+
+.rectangle {
+  height: 200px;
+  width: 150px;
+  background-color: #7fddff;
 }
 
 /* Project cards */
