--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,13 @@ body {
   flex-direction: column;
   height: 100%;
 }
+.rectangle {
+  height: 200px;
+  width: 150px;
+  background-color: #7fddff;
+  border-radius: 3rem;
+}
+
 /* Projects */
 #projects {
   display: flex;
