--- a/css/utilities.css
+++ b/css/utilities.css
@@ -78,7 +78,7 @@ h2::selection {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 10rem;
+  margin-top: 14rem;
   padding: 1rem;
 }
 
@@ -109,10 +109,10 @@ h2::selection {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 1rem;
+  margin-top: 4rem;
   padding-left: 3.5rem;
   padding-right: 3.5rem;
-  margin-bottom: .1rem;
+  padding-bottom: 1rem;
 }
 
 /* Project cards */
