--- a/css/style.css
+++ b/css/style.css
@@ -388,7 +388,7 @@ li{ /*style the li tag*/
 .skills1, .skills2{ /*style the text*/
 	width: calc(50% - 100px);
 	margin: 25px;
-	color: #fff;
+  overflow: visible;
 }
 
 .skills1 li{ /*set margin of li*/
@@ -403,16 +403,16 @@ li{ /*style the li tag*/
 .bar{ /*style the bar*/
 	background-color: #353b48;
 	display: block;
-	height: 5px;
+	height: 25px;
 	border: 1px solid rgba(0,0,0,0.3);
 	border-radius: 3px;
 	overflow: hidden;
 	box-shadow: 0 0 10px #42CAFD;
+  width: 100%; /* Ensure the bar takes full width of its container */
 }
 
 .bar span{ /*style the span tag*/
-  width:0;
-	height: 5px;
+	height: 100%;
 	display: block;
 	background-color: #7fddff;
   animation-fill-mode: forwards;
@@ -455,7 +455,7 @@ li{ /*style the li tag*/
 	}
 
 	100%{
-		width: 95%;
+		width: 100%;
 	}
 }
 
@@ -465,7 +465,7 @@ li{ /*style the li tag*/
 	}
 
 	100%{
-		width: 60%;
+		width: 100%;
 	}
 }
 
@@ -475,29 +475,29 @@ li{ /*style the li tag*/
 	}
 
 	100%{
-		width: 80%;
+		width: 100%;
 	}
 }
 
 /*skills 2 */
 .figma{ /*set skills and animation of figma*/
 	width: 100%;
-	animation: jquery 2s;
+	animation: figma 2s;
 }
 
 .illustrator{ /*set skills and animation of illustrator*/
 	width: 80%;
-	animation: jquery 2s;
+	animation: illustrator 2s;
 }
 
 .procreate{ /*set skills and animation of procreate*/
 	width: 80%;
-	animation: jquery 2s;
+	animation: procreate 2s;
 }
 
 .microsoft{ /*set skills and animation of microsoft*/
 	width: 100%;
-	animation: jquery 2s;
+	animation: microsoft 2s;
 }
 
 @keyframes figma{ /*animate figma skills*/
@@ -515,7 +515,7 @@ li{ /*style the li tag*/
 	}
 
 	100%{
-		width: 80%;
+		width: 100%;
 	}
 }
 @keyframes procreate{ /*animate procreate skills*/
@@ -524,7 +524,7 @@ li{ /*style the li tag*/
 	}
 
 	100%{
-		width: 80%;
+		width: 100%;
 	}
 }
 @keyframes microsoft{ /*animate microsoft skills*/
