--- a/css/style.css
+++ b/css/style.css
@@ -548,15 +548,11 @@ li{ /*style the li tag*/
 }
 
 .button {
-  display: inline-block; /* Changed from block to inline-block */
-  padding: 0.8em 1.4em; /* Corrected typo */
+  display: inline-block;
+  padding: 0.8em 1.4em; 
   font-size: 1rem;
-  background-color: #f5f5f5; /* Added a light background */
-  color: #333; /* Text color for visibility */
-  border: 1px solid #ccc; /* Add a subtle border */
   transition: transform 0.3s ease-in-out; /* Transition for transform on hover */
   margin: 0.5em; /* Space between buttons */
-  cursor: pointer; /* Cursor indicates it's clickable */
 }
 
 .button:hover {
